<resources>
    <string name="app_name">ServicesTasks</string>

    <string name="battery_normal_channel_name">Battery normal level channel</string>
    <string name="battery_urgent_channel_name">Battery low level channel</string>

    <string name="geo_channel_name">My location</string>
    <string name="geo_service_title">Location service</string>
    <string name="address_text">Address: %s</string>

    <string name="battery_notification_title">Battery monitoring</string>
    <string name="geo_notification_title">My location</string>

    <string name="service_start">starting …</string>

    <string name="battery_low_level">low level</string>
    <string name="battery_charging">charging</string>
    <string name="battery_level">%d%%</string>
    <string name="state_off">OFF</string>
    <string name="state_on">ON</string>
    <string name="battery_monitor_title">Battery monitor</string>
    <string name="low_level_max_value">Low level max value</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="location_service_title">Location service</string>
    <string name="notifications_period">Notifications period (minutes)</string>
    <string name="google_services_required">Google play services are required</string>
    <string name="location_provider_required">Location provider is not enabled</string>
    <string name="lack_permissions">lack of permissions: %s</string>
    <string name="location">latitude: %f, longitude: %f</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="no_address_found">No address found</string>
</resources>
